--- a/app/src/main/res/values-pl/strings.xml
+++ b/app/src/main/res/values-pl/strings.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 	
-	<!-- Managed by nift4 -->
+	<!-- Managed by hacker12455/Hacker1245 -->
 
     <string name="app_name">Android Boot Manager</string>
 	<string name="wrong_device_title">Nieodpowiednie urządzenie</string>
