--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,6 +2,8 @@
 <resources>
 
     <string name="app_name">Android Boot Manager</string>
+	<string name="fatal">FATAL ERROR</string>
+	<string name="cp_err_msg">Did you install the app on a SD card?</string>
 	<string name="wrong_device_title">Wrong device</string>
 	<string name="wrong_device_msg">Android Boot Manager is not available for this device (%1$s).</string>
 	<string name="allow_install_unchecked_title">Allow install not checked</string>
@@ -11,7 +13,11 @@
 	<string name="installing_title">Installing...</string>
 	<string name="installing_msg">Installing. Please wait...</string>
 	<string name="current_rom_name">Current ROM name</string>
-	<string name="path_lk2nd">Path to lk2nd.img</string>
+	<string name="select_droidboot_title">Select DroidBoot</string>
+	<string name="select_droidboot_msg">You will now be asked for the DroidBoot file. Make sure it is the right for your device!</string>
+	<string name="sure_title">Are you sure?</string>
+	<string name="sure_msg">If you now press OK, ABM will install. This the last confirmation!</string>
+	<string name="choose_device">Choose your device</string>
 	<string name="install_finish_title">Installation completed</string>
 	<string name="install_finish_msg">Return code is %1$sWhen the Return Code is ERROR, something went wrong. Please flash the uninstaller and ask in our Telegram group @andbootmgr. Don\'t forget the log file at /sdcard/abm/install.log! If the Return Code is OK, the installation was sucessful. You should reboot now.</string>
 	<string name="root">I am root. Fine! :)</string>
@@ -26,7 +32,7 @@
 	<string name="nodevcheck">Disable device check (if you spoof fingerprint)</string>
 	<string name="allow_install">I accept the risk, allow installation!</string>
 	<string name="not_installed">Android Boot Manager is not installed on your device!</string>
-	<string name="devices">It is only available for the Moto G5 (cedric)!</string>
+	<string name="devices">It is only available for the Moto G5 (cedric) and for the Volla Phone (yggdrasil)!</string>
 	<string name="be_careful">YOU CAN LOOSE YOUR DATA! YOU CAN BRICK YOUR DEVICE! YOU CAN LOOSE YOUR IMEI (as with anything on cedric)! YOU CAN LOOSE YOUR MONEY! NOBODY IS RESPONSIBLE EXCEPT YOU! DO AT YOUR OWN RISK AND BE CAREFUL!</string>
 	<string name="configurator">Configurator</string>
 	<string name="mount">Mount Bootset</string>
