--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -35,5 +35,11 @@
     <string name="mount">Bootset einbinden</string>
     <string name="umount">Bootset ausbinden</string>
     <string name="open_configurator">Einbinden falls nötig und Konfigurator öffnen</string>
+    <string name="roms">ROMs</string>
+    <string name="entries">Einträge</string>
+    <string name="general">Allgemein</string>
+    <string name="timeout">Wartezeit</string>
+    <string name="default_entry">Standardeintrag</string>
+    <string name="save">Speichern</string>
     <string name="app_unfinished">Die Android-Startverwaltung ist erfolgreich installiert aber die App ist noch nicht fertig. Nutzlose Knöpfe und leere Seiten sind zu erwarten :(</string>
 </resources>
