New Crowdin updates (#19)
* New translations strings.xml (German)

* New translations strings.xml (Polish)

* New translations strings.xml (Russian)

* New translations strings.xml (Turkish)

* New translations strings.xml (Ukrainian)

* New translations strings.xml (German)

* New translations strings.xml (Polish)

--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -49,6 +49,6 @@
     <string name="initrd">Initrd</string>
     <string name="cmdline">Optionen</string>
     <string name="delete">Löschen</string>
-    <string name="filename">Dateiname (keine Leerzeichen, keine Dateiendung)</string>
+    <string name="filename">Konfigurationsdateiname (keine Leerzeichen, keine Dateiendung)</string>
     <string name="app_unfinished">Die Android-Startverwaltung ist erfolgreich installiert aber die App ist noch nicht fertig. Nutzlose Knöpfe und leere Seiten sind zu erwarten :(</string>
 </resources>
