--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -51,6 +51,9 @@
 	<string name="cmdline">Cmdline</string>
 	<string name="delete">Delete</string>
 	<string name="filename">Config file name (No spaces, no file extension)</string>
+	<string name="add_rom">Add ROM</string>
+	<string name="data_partition">Data Partition</string>
+	<string name="system_partition">System Partition</string>
 	<string name="app_unfinished">Android Boot Manager is installed sucessfully but the app is not yet finished; blank pages and buttons that do nothing are excepted :(</string>
 
 </resources>
