--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,8 +10,8 @@
 	<string name="allow_install_unchecked_msg">It seems that you didn\'t look at this page. That\'s not good!</string>
 	<string name="ok">OK</string>
 	<string name="cancel">Cancel</string>
-	<string name="installing_title">Installing...</string>
-	<string name="installing_msg">Installing. Please wait...</string>
+	<string name="installing_title">Installing…</string>
+	<string name="installing_msg">Installing. Please wait…</string>
 	<string name="current_rom_name">Current ROM name</string>
 	<string name="select_droidboot_title">Select DroidBoot</string>
 	<string name="select_droidboot_msg">You will now be asked for the DroidBoot file. Make sure it is the right for your device!</string>
@@ -19,7 +19,7 @@
 	<string name="sure_msg">If you now press OK, ABM will install. This the last confirmation!</string>
 	<string name="choose_device">Choose your device</string>
 	<string name="install_finish_title">Installation completed</string>
-	<string name="install_finish_msg">Return code is %1$sWhen the Return Code is ERROR, something went wrong. Please flash the uninstaller and ask in our Telegram group @andbootmgr. Don\'t forget the log file at /sdcard/abm/install.log! If the Return Code is OK, the installation was sucessful. You should reboot now.</string>
+	<string name="install_finish_msg">Return code is %1$sWhen the Return Code is ERROR, something went wrong. Please flash the uninstaller and ask in our Telegram group @andbootmgr. Don\'t forget the log file at /sdcard/abm/install.log! If the Return Code is OK, the installation was successful. You should reboot now.</string>
 	<string name="root">I am root. Fine! :)</string>
 	<string name="no_root">I am NOT root. Something went wrong!</string>
 	<string name="test_root">Test Root</string>
@@ -43,7 +43,7 @@
 	<string name="default_entry">Default Entry</string>
 	<string name="save">Save</string>
 	<string name="edit_entry">Edit Entry</string>
-	<string name="entry_create">Create new...</string>
+	<string name="entry_create">Create new…</string>
 	<string name="title">Title</string>
 	<string name="kernel">Kernel</string>
 	<string name="dtb">DTB</string>
@@ -54,6 +54,6 @@
 	<string name="add_rom">Add ROM</string>
 	<string name="data_partition">Data Partition</string>
 	<string name="system_partition">System Partition</string>
-	<string name="app_unfinished">Android Boot Manager is installed sucessfully but the app is not yet finished; blank pages and buttons that do nothing are excepted :(</string>
+	<string name="app_unfinished">Android Boot Manager is installed successfully but the app is not yet finished; blank pages and buttons that do nothing are excepted :(</string>
 
 </resources>
