--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -9,8 +9,8 @@
     <string name="allow_install_unchecked_msg">Похоже, вы не прочитали эту страницу. Это не есть хорошо!</string>
     <string name="ok">OK</string>
     <string name="cancel">Отмена</string>
-    <string name="installing_title">Идёт установка...</string>
-    <string name="installing_msg">Идёт установка. Пожалуйста, подождите...</string>
+    <string name="installing_title">Идёт установка…</string>
+    <string name="installing_msg">Идёт установка. Пожалуйста, подождите…</string>
     <string name="current_rom_name">Название текущей прошивки</string>
     <string name="select_droidboot_title">Select DroidBoot</string>
     <string name="select_droidboot_msg">You will now be asked for the DroidBoot file. Make sure it is the right for your device!</string>
@@ -23,7 +23,7 @@
     <string name="no_root">У меня нет рут-прав. Что-то пошло не так!</string>
     <string name="test_root">Наличие рут прав</string>
     <string name="readme_title">README, исходный код и лицензия</string>
-    <string name="readme_text">The source is available here: %1$s\nThe README is available here: %2$s</string>
+    <string name="readme_text">Исходный код доступен здесь: %1$s\nREADME доступен здесь: %2$s</string>
     <string name="install">Установить</string>
     <string name="readme">README</string>
     <string name="nodevcheck">Отключить проверку на устройство (если вы подменили fingerprint)</string>
@@ -42,7 +42,7 @@
     <string name="default_entry">Default Entry</string>
     <string name="save">Save</string>
     <string name="edit_entry">Edit Entry</string>
-    <string name="entry_create">Create new...</string>
+    <string name="entry_create">Create new…</string>
     <string name="title">Title</string>
     <string name="kernel">Kernel</string>
     <string name="dtb">DTB</string>
@@ -51,7 +51,7 @@
     <string name="delete">Delete</string>
     <string name="filename">Config file name (No spaces, no file extension)</string>
     <string name="add_rom">Add ROM</string>
-    <string name="data_partition">Data Partition</string>
-    <string name="system_partition">System Partition</string>
+    <string name="rom_location">ROM location</string>
+    <string name="delete_real_rom">You cannot delete your primary ROM!</string>
     <string name="app_unfinished">Android Boot Manager установлен успешно, но приложение всё ещё в разработке, пустые разделы и бесполезные кнопки не исключены. :(</string>
 </resources>
