--- a/app/src/main/res/values-pt/strings.xml
+++ b/app/src/main/res/values-pt/strings.xml
@@ -60,6 +60,8 @@
     <string name="delete_real_rom">Você não pode deletar sua ROM principal!</string>
     <string name="app_unfinished">O Android Boot Manager está instalado corretamente mais o app não está terminado; páginas em branco e botões sem função são esperados :(</string>
     <string name="rom_type_add_rom_zip">Android (ROM zip)</string>
+    <string name="updatelk">Update DroidBoot</string>
+    <string name="updated">I updated my main ROM</string>
     <string name="rom_type_add_ut_sysimg_halium_rootfs">Ubuntu Touch (System image, Helium Boot image, Rootfs)</string>
     <string name="rom_type_add_ut_sysimg_halium">Ubuntu Touch (System image, Helium Boot image)</string>
 </resources>
