--- a/app/src/main/res/values-tr/strings.xml
+++ b/app/src/main/res/values-tr/strings.xml
@@ -60,6 +60,8 @@
     <string name="delete_real_rom">Ana ROM silinemez!</string>
     <string name="app_unfinished">Android Boot Manager başarıyla yüklendi ancak uygulama yapımı henüz bitmedi; hiç bir şey yapmayan boş sayfalar ve düğmeler olabilir :(</string>
     <string name="rom_type_add_rom_zip">Android (ROM zip)</string>
+    <string name="updatelk">Update DroidBoot</string>
+    <string name="updated">I updated my main ROM</string>
     <string name="rom_type_add_ut_sysimg_halium_rootfs">Ubuntu Touch (System image, Halium Boot image, Rootfs)</string>
     <string name="rom_type_add_ut_sysimg_halium">Ubuntu Touch (System image, Halium Boot image)</string>
 </resources>
