--- a/app/src/main/res/values-it/strings.xml
+++ b/app/src/main/res/values-it/strings.xml
@@ -49,11 +49,11 @@ se falsifichi il fingerprint)</string>
     <string name="dtb">DTB</string>
     <string name="initrd">Initrd</string>
     <string name="cmdline">Cmdline</string>
-    <string name="format">Format</string>
-    <string name="format_msg">ATTENTION: If you now click OK, all data on that SD card will be LOST</string>
-    <string name="unsupported_os">This operating system installer is unsupported.</string>
-    <string name="storage_in_use">The storage is currently in use. Often does Android auto-mounting or your SD card is formatted as Internal Storage. Please make sure it is not used (mounted or even modified)</string>
-    <string name="no_storage_found">No storage device with ABM metadata was found but you need one for this. If you have one, press \"Format\". If there is no \"Format\" button there was no compatible storage found.</string>
+    <string name="format">Formatta</string>
+    <string name="format_msg">ATTENZIONE: Se ora si fa clic su OK, tutti i dati sulla scheda SD saranno PERSI</string>
+    <string name="unsupported_os">Questo file di installazione del sistema operativo non è supportato.</string>
+    <string name="storage_in_use">Lo spazio di archiviazione è attualmente in uso. Spesso Android la monta automaticamente o la scheda SD è formattata come memoria interna. Assicurati che non sia usato (montato o addirittura modificato)</string>
+    <string name="no_storage_found">Nessun dispositivo di archiviazione con metadati ABM è stato trovato, esso ti server per completare questa operazione. Se ne hai uno, premi \"Formatta\". Se non c\'è nessun pulsante \"Formatta\" allora la memoria non è compatibile.</string>
     <string name="delete">Elimina</string>
     <string name="filename">Nome file Config (Nessun spazio, no estensione file)</string>
     <string name="add_rom">Aggiungi ROM</string>
@@ -61,12 +61,12 @@ se falsifichi il fingerprint)</string>
     <string name="delete_real_rom">Non puoi eliminare la tua ROM primaria!</string>
     <string name="app_unfinished">Android Boot Manager è stato installato con successo ma quest’applicazione non è ancora finita; aspettati di trovare pagine vuote e pulsanti che non funzionano :(</string>
     <string name="rom_type_add_rom_zip">Android (ROM zip)</string>
-    <string name="updatelk">Update DroidBoot</string>
-    <string name="updated">I updated my main ROM</string>
-    <string name="rom_type_add_ut_sysimg_halium_rootfs">Ubuntu Touch (System image, Halium Boot image, Rootfs)</string>
-    <string name="rom_type_add_ut_sysimg_halium">Ubuntu Touch (System image, Halium Boot image)</string>
-    <string name="install_ut_halium_boot_systemimage">You are going to install ubuntu touch, using sytem image and halium boot. Are you sure?</string>
-    <string name="select_halium_boot">Please select halium boot file</string>
-    <string name="select_system_image">Please select systemimage</string>
-    <string name="enter_rom_name">Enter ROM name</string>
+    <string name="updatelk">Aggiorna DroidBoot</string>
+    <string name="updated">Ho aggiornato la ROM principale</string>
+    <string name="rom_type_add_ut_sysimg_halium_rootfs">Ubuntu Touch (Systemimage, Halium boot, Rootfs)</string>
+    <string name="rom_type_add_ut_sysimg_halium">Ubuntu Touch (Systemimage, Halium boot)</string>
+    <string name="install_ut_halium_boot_systemimage">Stai per installare il ubuntu touch, usando l\'immagine system (systemimage) e halium boot. Sei sicuro?</string>
+    <string name="select_halium_boot">Selezionare il file halium boot</string>
+    <string name="select_system_image">Selezionare l\'immagine di sistema (systemimage)</string>
+    <string name="enter_rom_name">Inserisci il nome della ROM</string>
 </resources>
