--- a/app/src/main/res/values-pt/strings.xml
+++ b/app/src/main/res/values-pt/strings.xml
@@ -18,9 +18,9 @@
     <string name="sure_msg">Se você aperta OK, o ABM será instalado. Essa é a última confirmação!</string>
     <string name="choose_device">Escolha o seu dispositivo</string>
     <string name="install_finish_title">Instalação completa</string>
-    <string name="install_finish_msg">Código de retorno %1$s é Quando o código de retorno for ERRO algo deu errado. Porfavor instale o desinstalador e pergunte no nosso grupo do Telegram @andbootmgr. Não se esqueça do arquivo do log em /sdcard/abm/install.log! se o código de retorno for OK, a instalação de certo. Você deve reiniciar agora.</string>
-    <string name="root">Eu estou com root. Tudo bem :)</string>
-    <string name="no_root">Não estou com root, algo deu errado!</string>
+    <string name="install_finish_msg">Código de retorno é  %1$s Quando o código de retorno for ERRO algo deu errado. Porfavor flasheie o desinstalador e pergunte no nosso grupo do Telegram @andbootmgr. Não se esqueça do arquivo do log em /sdcard/abm/install.log! se o código de retorno for OK, a instalação de certo. Você deve reiniciar agora.</string>
+    <string name="root">root detectado. Tudo bem :)</string>
+    <string name="no_root">root NÃO detectado. Alguma coisa deu errado!</string>
     <string name="test_root">Testar Root</string>
     <string name="readme_title">LEIA-ME, Código e Licença</string>
     <string name="readme_text">O código está disponível aqui: %1$s\nO LEIA-ME está disponível aqui: %2$s</string>
@@ -60,12 +60,12 @@
     <string name="delete_real_rom">Você não pode deletar sua ROM principal!</string>
     <string name="app_unfinished">O Android Boot Manager está instalado corretamente mais o app não está terminado; páginas em branco e botões sem função são esperados :(</string>
     <string name="rom_type_add_rom_zip">Android (ROM zip)</string>
-    <string name="updatelk">Update DroidBoot</string>
-    <string name="updated">I updated my main ROM</string>
+    <string name="updatelk">Atualizar DroidBoot</string>
+    <string name="updated">Eu atualizei minha ROM principal</string>
     <string name="rom_type_add_ut_sysimg_halium_rootfs">Ubuntu Touch (System image, Helium Boot image, Rootfs)</string>
     <string name="rom_type_add_ut_sysimg_halium">Ubuntu Touch (System image, Helium Boot image)</string>
-    <string name="install_ut_halium_boot_systemimage">You are going to install ubuntu touch, using sytem image and halium boot. Are you sure?</string>
-    <string name="select_halium_boot">Please select halium boot file</string>
-    <string name="select_system_image">Please select systemimage</string>
-    <string name="enter_rom_name">Enter ROM name</string>
+    <string name="install_ut_halium_boot_systemimage">Você está prestes a instalar o Ubuntu Touch, usando a System Image e o Halium Boot. Você tem certeza?</string>
+    <string name="select_halium_boot">Porfavor selecione o arquivo do Halium Boot</string>
+    <string name="select_system_image">Porfavor selecione a System Image</string>
+    <string name="enter_rom_name">Insira o nome da ROM</string>
 </resources>
