--- a/app/src/main/res/values-tr/strings.xml
+++ b/app/src/main/res/values-tr/strings.xml
@@ -48,11 +48,11 @@
     <string name="dtb">DTB</string>
     <string name="initrd">Initrd</string>
     <string name="cmdline">Cmdline</string>
-    <string name="format">Format</string>
-    <string name="format_msg">ATTENTION: If you now click OK, all data on that SD card will be LOST</string>
-    <string name="unsupported_os">This operating system installer is unsupported.</string>
-    <string name="storage_in_use">The storage is currently in use. Often does Android auto-mounting or your SD card is formatted as Internal Storage. Please make sure it is not used (mounted or even modified)</string>
-    <string name="no_storage_found">No storage device with ABM metadata was found but you need one for this. If you have one, press \"Format\". If there is no \"Format\" button there was no compatible storage found.</string>
+    <string name="format">Biçimlendir</string>
+    <string name="format_msg">DİKKAT: Eğer Tamam\'a basarsanız, SD Kardınızdaki tüm veriler SİLİNECEKTİR</string>
+    <string name="unsupported_os">Bu işletim sisteminin yükleyicisi desteklenmiyor.</string>
+    <string name="storage_in_use">Hafıza şuanda kullanılıyor. Bazen Android otomatik olarak hafıza kardınızı bağlayabilir veya hafıza kardınızı ana hafıza olarak kullanıyor olabilirsiniz. Lütfen hafıza kartınızın kullanılmadığından emin olun (bağlı veya düzenlenmemiş şekilde)</string>
+    <string name="no_storage_found">ABM ile ilgili veri içeren hafıza bulunamadı. Eğer elinizde bir tane varsa, \"Biçimlendir\" tuşuna basın. \"Biçimlendir\" tuşu yoksa uygun hafıza bulunamadı demektir.</string>
     <string name="delete">Sil</string>
     <string name="filename">Yapılandırma dosyasının adı (Boşluk, uzantı içermeyecek)</string>
     <string name="add_rom">ROM ekle</string>
@@ -60,10 +60,10 @@
     <string name="delete_real_rom">Ana ROM silinemez!</string>
     <string name="app_unfinished">Android Boot Manager başarıyla yüklendi ancak uygulama yapımı henüz bitmedi; hiç bir şey yapmayan boş sayfalar ve düğmeler olabilir :(</string>
     <string name="rom_type_add_rom_zip">Android (ROM zip)</string>
-    <string name="updatelk">Update DroidBoot</string>
-    <string name="updated">I updated my main ROM</string>
-    <string name="rom_type_add_ut_sysimg_halium_rootfs">Ubuntu Touch (System image, Halium Boot image, Rootfs)</string>
-    <string name="rom_type_add_ut_sysimg_halium">Ubuntu Touch (System image, Halium Boot image)</string>
+    <string name="updatelk">DroidBoot\'u Güncelle</string>
+    <string name="updated">Ben ana ROM\'umu güncelledim</string>
+    <string name="rom_type_add_ut_sysimg_halium_rootfs">Ubuntu Touch (System imajı, Halium Boot imajı, Rootfs)</string>
+    <string name="rom_type_add_ut_sysimg_halium">Ubuntu Touch (System imajı, Halium Boot imajı)</string>
     <string name="install_ut_halium_boot_systemimage">You are going to install ubuntu touch, using sytem image and halium boot. Are you sure?</string>
     <string name="select_halium_boot">Please select halium boot file</string>
     <string name="select_system_image">Please select systemimage</string>
