--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -69,5 +69,6 @@
     <string name="select_halium_boot">Please select halium boot file</string>
     <string name="select_system_image">Please select systemimage</string>
     <string name="enter_rom_name">Enter ROM name</string>
-
+    <string name="install_ut_halium_boot_systemimage_rootfs">You are going to install ubuntu touch, using sytem image, rootfs and halium boot. Are you sure?</string>
+    <string name="select_rootfs">Please select rootfs</string>
 </resources>
