Initial rewrite of MainActivity
* far from being complete
* finally delete this annoying .idea

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,69 +2,69 @@
 <resources>
 
     <string name="app_name">Android Boot Manager</string>
-	<string name="fatal">FATAL ERROR</string>
-	<string name="cp_err_msg">Did you install the app on a SD card?</string>
-	<string name="wrong_device_title">Wrong device</string>
-	<string name="wrong_device_msg">Android Boot Manager is not available for this device (%1$s).</string>
-	<string name="allow_install_unchecked_title">Allow install not checked</string>
-	<string name="allow_install_unchecked_msg">It seems that you didn\'t look at this page. That\'s not good!</string>
-	<string name="ok">OK</string>
-	<string name="cancel">Cancel</string>
-	<string name="installing_title">Installing…</string>
-	<string name="installing_msg">Installing. Please wait…</string>
-	<string name="current_rom_name">Current ROM name</string>
-	<string name="select_droidboot_title">Select DroidBoot</string>
-	<string name="select_droidboot_msg">You will now be asked for the DroidBoot file. Make sure it is the right for your device!</string>
-	<string name="sure_title">Are you sure?</string>
-	<string name="sure_msg">If you now press OK, ABM will install. This the last confirmation!</string>
-	<string name="choose_device">Choose your device</string>
-	<string name="install_finish_title">Installation completed</string>
-	<string name="install_finish_msg">Return code is %1$sWhen the Return Code is ERROR, something went wrong. Please flash the uninstaller and ask in our Telegram group @andbootmgr. Don\'t forget the log file at /sdcard/abm/install.log! If the Return Code is OK, the installation was successful. You should reboot now.</string>
-	<string name="root">I am root. Fine! :)</string>
-	<string name="no_root">I am NOT root. Something went wrong!</string>
-	<string name="test_root">Test Root</string>
-	<string name="readme_title">README, Source and Licence</string>
-	<string name="readme_text">The source is available here: %1$s\nThe README is available here: %2$s</string>
-	<string name="install">Install</string>
-	<string name="readme">README</string>
-	<string name="nodevcheck">Disable device check (if you spoof fingerprint)</string>
-	<string name="allow_install">I accept the risk, allow installation!</string>
-	<string name="not_installed">Android Boot Manager is not installed on your device!</string>
-	<string name="devices">It is only available for the Moto G5 (cedric) and for the Volla Phone (yggdrasil)!</string>
-	<string name="be_careful">YOU CAN LOOSE YOUR DATA! YOU CAN BRICK YOUR DEVICE! YOU CAN LOOSE YOUR IMEI (as with anything on cedric)! YOU CAN LOOSE YOUR MONEY! NOBODY IS RESPONSIBLE EXCEPT YOU! DO AT YOUR OWN RISK AND BE CAREFUL!</string>
-	<string name="configurator">Configurator</string>
-	<string name="mount">Mount Bootset</string>
-	<string name="umount">Unmount Bootset</string>
-	<string name="open_configurator">Mount if necessary and open Configurator</string>
-	<string name="roms">ROMs</string>
-	<string name="entries">Entries</string>
-	<string name="general">General</string>
-	<string name="timeout">Timeout</string>
-	<string name="default_entry">Default Entry</string>
-	<string name="save">Save</string>
-	<string name="edit_entry">Edit Entry</string>
-	<string name="entry_create">Create new…</string>
-	<string name="title">Title</string>
-	<string name="kernel">Kernel</string>
-	<string name="dtb">DTB</string>
-	<string name="initrd">Initrd</string>
-	<string name="cmdline">Cmdline</string>
-	<string name="format">Format</string>
-	<string name="format_msg">ATTENTION: If you now click OK, all data on that SD card will be LOST</string>
-	<string name="unsupported_os">This operating system installer is unsupported.</string>
-	<string name="storage_in_use">The storage is currently in use. Often does Android auto-mounting or your SD card is formatted as Internal Storage. Please make sure it is not used (mounted or even modified)</string>
-	<string name="no_storage_found">No storage device with ABM metadata was found but you need one for this. If you have one, press "Format". If there is no "Format" button there was no compatible storage found.</string>
-	<string name="delete">Delete</string>
-	<string name="filename">Config file name (No spaces, no file extension)</string>
-	<string name="add_rom">Add ROM</string>
-	<string name="rom_location">ROM location</string>
-	<string name="delete_real_rom">You cannot delete your primary ROM!</string>
-	<string name="app_unfinished">Android Boot Manager is installed successfully but the app is not yet finished; blank pages and buttons that do nothing are excepted :(</string>
-	<string name="rom_type_add_rom_zip">Android (ROM zip)</string>
-	<string name="updatelk">Update DroidBoot</string>
-	<string name="updated">I updated my main ROM</string>
-	<string name="rom_type_add_ut_sysimg_halium_rootfs">Ubuntu Touch (System image, Halium Boot image, Rootfs)</string>
-	<string name="rom_type_add_ut_sysimg_halium">Ubuntu Touch (System image, Halium Boot image)</string>
+    <string name="fatal">FATAL ERROR</string>
+    <string name="cp_err_msg">Did you install the app on a SD card?</string>
+    <string name="wrong_device_title">Wrong device</string>
+    <string name="wrong_device_msg">Android Boot Manager is not available for this device (%1$s).</string>
+    <string name="allow_install_unchecked_title">Allow install not checked</string>
+    <string name="allow_install_unchecked_msg">It seems that you didn\'t look at this page. That\'s not good!</string>
+    <string name="ok">OK</string>
+    <string name="cancel">Cancel</string>
+    <string name="installing_title">Installing…</string>
+    <string name="installing_msg">Installing. Please wait…</string>
+    <string name="current_rom_name">Current ROM name</string>
+    <string name="select_droidboot_title">Select DroidBoot</string>
+    <string name="select_droidboot_msg">You will now be asked for the DroidBoot file. Make sure it is the right for your device!</string>
+    <string name="sure_title">Are you sure?</string>
+    <string name="sure_msg">If you now press OK, ABM will install. This the last confirmation!</string>
+    <string name="choose_device">Choose your device</string>
+    <string name="install_finish_title">Installation completed</string>
+    <string name="install_finish_msg">Return code is %1$sWhen the Return Code is ERROR, something went wrong. Please flash the uninstaller and ask in our Telegram group @andbootmgr. Don\'t forget the log file at /sdcard/abm/install.log! If the Return Code is OK, the installation was successful. You should reboot now.</string>
+    <string name="root">I am root. Fine! :)</string>
+    <string name="no_root">I am NOT root. Something went wrong!</string>
+    <string name="test_root">Test Root</string>
+    <string name="readme_title">README, Source and Licence</string>
+    <string name="readme_text">The source is available here: %1$s\nThe README is available here: %2$s</string>
+    <string name="install">Install</string>
+    <string name="readme">README</string>
+    <string name="nodevcheck">Disable device check (if you spoof fingerprint)</string>
+    <string name="allow_install">I accept the risk, allow installation!</string>
+    <string name="not_installed">Android Boot Manager is not installed on your device!</string>
+    <string name="devices">It is only available for the Moto G5 (cedric) and for the Volla Phone (yggdrasil)!</string>
+    <string name="be_careful">YOU CAN LOOSE YOUR DATA! YOU CAN BRICK YOUR DEVICE! YOU CAN LOOSE YOUR IMEI (as with anything on cedric)! YOU CAN LOOSE YOUR MONEY! NOBODY IS RESPONSIBLE EXCEPT YOU! DO AT YOUR OWN RISK AND BE CAREFUL!</string>
+    <string name="configurator">Configurator</string>
+    <string name="mount">Mount Bootset</string>
+    <string name="umount">Unmount Bootset</string>
+    <string name="open_configurator">Mount if necessary and open Configurator</string>
+    <string name="roms">ROMs</string>
+    <string name="entries">Entries</string>
+    <string name="general">General</string>
+    <string name="timeout">Timeout</string>
+    <string name="default_entry">Default Entry</string>
+    <string name="save">Save</string>
+    <string name="edit_entry">Edit Entry</string>
+    <string name="entry_create">Create new…</string>
+    <string name="title">Title</string>
+    <string name="kernel">Kernel</string>
+    <string name="dtb">DTB</string>
+    <string name="initrd">Initrd</string>
+    <string name="cmdline">Cmdline</string>
+    <string name="format">Format</string>
+    <string name="format_msg">ATTENTION: If you now click OK, all data on that SD card will be LOST</string>
+    <string name="unsupported_os">This operating system installer is unsupported.</string>
+    <string name="storage_in_use">The storage is currently in use. Often does Android auto-mounting or your SD card is formatted as Internal Storage. Please make sure it is not used (mounted or even modified)</string>
+    <string name="no_storage_found">No storage device with ABM metadata was found but you need one for this. If you have one, press "Format". If there is no "Format" button there was no compatible storage found.</string>
+    <string name="delete">Delete</string>
+    <string name="filename">Config file name (No spaces, no file extension)</string>
+    <string name="add_rom">Add ROM</string>
+    <string name="rom_location">ROM location</string>
+    <string name="delete_real_rom">You cannot delete your primary ROM!</string>
+    <string name="app_unfinished">Android Boot Manager is installed successfully but the app is not yet finished; blank pages and buttons that do nothing are excepted :(</string>
+    <string name="rom_type_add_rom_zip">Android (ROM zip)</string>
+    <string name="updatelk">Update DroidBoot</string>
+    <string name="updated">I updated my main ROM</string>
+    <string name="rom_type_add_ut_sysimg_halium_rootfs">Ubuntu Touch (System image, Halium Boot image, Rootfs)</string>
+    <string name="rom_type_add_ut_sysimg_halium">Ubuntu Touch (System image, Halium Boot image)</string>
     <string name="install_ut_halium_boot_systemimage">You are going to install ubuntu touch, using sytem image and halium boot. Are you sure?</string>
     <string name="select_halium_boot">Please select halium boot file</string>
     <string name="select_system_image">Please select systemimage</string>
@@ -73,5 +73,19 @@
     <string name="select_rootfs">Please select rootfs</string>
     <string name="install_sailfish">You are going to install SailfishOS, using zip. Are you sure?</string>
     <string name="select_sfos_zip">Please select SailfishOS zip</string>
-	<string name="rom_type_add_sailfish">Sailfish OS</string>
+    <string name="rom_type_add_sailfish">Sailfish OS</string>
+    <string name="title_activity_main">MainActivity</string>
+    <string name="navigation_drawer_open">Open navigation drawer</string>
+    <string name="navigation_drawer_close">Close navigation drawer</string>
+    <string name="nav_header_title">@string/app_name</string>
+    <string name="nav_header_subtitle">Dualboot - the other way</string>
+    <string name="nav_header_desc">Navigation header</string>
+    <string name="action_settings">Settings</string>
+
+    <string name="menu_home">Home</string>
+    <string name="menu_gallery">Gallery</string>
+    <string name="menu_slideshow">Slideshow</string>
+    <string name="aboutLibraries_description_showIcon" translatable="false">true</string>
+    <string name="aboutLibraries_description_showVersion" translatable="false">true</string>
+    <string name="aboutLibraries_description_text">@string/nav_header_subtitle</string>
 </resources>
