--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources>
+<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
     <string name="app_name">Android-Startverwaltung</string>
     <string name="fatal">SCHWERWIEGENDER FEHLER</string>
-    <string name="cp_err_msg">Failed to extract some data. Did you install the app on a SD card? Pressing OK will take you to the app, do not do anything without investigating first!</string>
+    <string name="cp_err_msg">Fehler beim Extrahieren der Daten. Haben Sie die App auf einer SD-Karte installiert? Das Drücken von OK bringt Sie zur App, tun Sie nichts ohne den Fehler vorher zu untersuchen!</string>
     <string name="wrong_device_title">Inkompatibles Gerät</string>
     <string name="wrong_device_msg">Die Android-Startverwaltung ist für dieses Gerät (%1$s) nicht verfügbar.</string>
     <string name="allow_install_unchecked_title">Installation ist nicht erlaubt</string>
@@ -74,18 +74,24 @@
     <string name="select_sfos_zip">Bitte wähle die SailfishOS zip-Datei aus</string>
     <string name="rom_type_add_sailfish">Sailfish OS</string>
     <string name="title_activity_main">MainActivity</string>
-    <string name="navigation_drawer_open">Open navigation drawer</string>
-    <string name="navigation_drawer_close">Close navigation drawer</string>
+    <string name="navigation_drawer_open">Navigationsleiste öffnen</string>
+    <string name="navigation_drawer_close">Navigationsleiste schließen</string>
     <string name="nav_header_title">@string/app_name</string>
-    <string name="nav_header_subtitle">Multiboot for Android - the other way</string>
-    <string name="nav_header_desc">Navigation header</string>
-    <string name="action_settings">Settings</string>
-    <string name="menu_home">Home</string>
-    <string name="menu_gallery">Gallery</string>
-    <string name="menu_slideshow">Slideshow</string>
-    <string name="aboutLibraries_description_text">@string/nav_header_subtitle</string>
-    <string name="home_installedWorking_img">Checkmark/Cross to represent installed state</string>
-    <string name="home_installedWorking_text">Failed to load state</string>
-    <string name="home_installedWorking_ok">Installed &amp; working</string>
-    <string name="home_installedWorking_no">Not installed</string>
+    <string name="nav_header_subtitle">Multiboot für Android - mal anders</string>
+    <string name="nav_header_desc">Navigations-Header</string>
+    <string name="action_settings">Einstellungen</string>
+    <string name="menu_home">Startseite</string>
+    <string name="menu_gallery">Galerie</string>
+    <string name="menu_slideshow">Diashow</string>
+    <string name="aboutLibraries_description_text">Untertitel @string/nav_header</string>
+    <string name="home_installedWorking_img">Checkmark um den installierten Zustand darzustellen</string>
+    <string name="home_installedWorking_text">Fehler beim Laden des Status</string>
+    <string name="home_installedWorking_ok">Installiert &amp; funktioniert</string>
+    <string name="home_installedWorking_no">Nicht installiert</string>
+    <string name="loading">Laden…</string>
+    <string name="installcheck1">Installationsüberprüfung #1:</string>
+    <string name="installcheck2">Installationsüberprüfung #2:</string>
+    <string name="installcheck3">Installationsüberprüfung #3:</string>
+    <string name="superuser">Root:</string>
+    <string name="failure">Ein Fehler ist aufgetreten</string>
 </resources>
