--- a/app/src/main/res/values-pt/strings.xml
+++ b/app/src/main/res/values-pt/strings.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources>
+<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
     <string name="app_name">Android Boot Manager</string>
     <string name="fatal">ERRO FATAL</string>
-    <string name="cp_err_msg">Failed to extract some data. Did you install the app on a SD card? Pressing OK will take you to the app, do not do anything without investigating first!</string>
+    <string name="cp_err_msg">Falha ao pegar alguns dados. você instalou o app em um cartão SD? Pressionando OK levará você ao app, não faça nada sem investigar primeiro!</string>
     <string name="wrong_device_title">Dispositivo errado</string>
     <string name="wrong_device_msg">O Android Boot Manager não está disponível para este dispositivo (%1$s).</string>
     <string name="allow_install_unchecked_title">Permitir instalação não checada</string>
@@ -64,28 +64,34 @@
     <string name="updated">Eu atualizei minha ROM principal</string>
     <string name="rom_type_add_ut_sysimg_halium_rootfs">Ubuntu Touch (System image, Helium Boot image, Rootfs)</string>
     <string name="rom_type_add_ut_sysimg_halium">Ubuntu Touch (System image, Helium Boot image)</string>
-    <string name="install_ut_halium_boot_systemimage">Você está prestes a instalar o Ubuntu Touch, usando a System Image e o Halium Boot. Você tem certeza?</string>
+    <string name="install_ut_halium_boot_systemimage">You are going to install ubuntu touch, using system image and halium boot. Are you sure?</string>
     <string name="select_halium_boot">Porfavor selecione o arquivo do Halium Boot</string>
     <string name="select_system_image">Porfavor selecione a System Image</string>
     <string name="enter_rom_name">Insira o nome da ROM</string>
-    <string name="install_ut_halium_boot_systemimage_rootfs">Você está prestes a instalar o Ubuntu Touch, usando a System Image, rootfs e o Halium Boot. você tem certeza?</string>
+    <string name="install_ut_halium_boot_systemimage_rootfs">You are going to install ubuntu touch, using system image, rootfs and halium boot. Are you sure?</string>
     <string name="select_rootfs">Por favor selecione o rootfs</string>
     <string name="install_sailfish">Você está prestes a instalar o SailfishOS, usando um zip. Você tem certeza?</string>
     <string name="select_sfos_zip">Please select SailfishOS zip</string>
     <string name="rom_type_add_sailfish">Sailfish OS</string>
     <string name="title_activity_main">MainActivity</string>
-    <string name="navigation_drawer_open">Open navigation drawer</string>
-    <string name="navigation_drawer_close">Close navigation drawer</string>
+    <string name="navigation_drawer_open">Abrir gaveta de navegação</string>
+    <string name="navigation_drawer_close">Fechar gaveta de navegação</string>
     <string name="nav_header_title">@string/app_name</string>
     <string name="nav_header_subtitle">Multiboot for Android - the other way</string>
-    <string name="nav_header_desc">Navigation header</string>
-    <string name="action_settings">Settings</string>
-    <string name="menu_home">Home</string>
-    <string name="menu_gallery">Gallery</string>
+    <string name="nav_header_desc">Cabeçalho de navegação</string>
+    <string name="action_settings">Opções</string>
+    <string name="menu_home">Lar</string>
+    <string name="menu_gallery">Galeria</string>
     <string name="menu_slideshow">Slideshow</string>
     <string name="aboutLibraries_description_text">@string/nav_header_subtitle</string>
-    <string name="home_installedWorking_img">Checkmark/Cross to represent installed state</string>
-    <string name="home_installedWorking_text">Failed to load state</string>
-    <string name="home_installedWorking_ok">Installed &amp; working</string>
-    <string name="home_installedWorking_no">Not installed</string>
+    <string name="home_installedWorking_img">Marca/Cruz pra representar o estado instalado</string>
+    <string name="home_installedWorking_text">Falha ao carregar estado</string>
+    <string name="home_installedWorking_ok">Instalado &amp; funcionando</string>
+    <string name="home_installedWorking_no">Não instalado</string>
+    <string name="loading">Loading…</string>
+    <string name="installcheck1">Install check #1:</string>
+    <string name="installcheck2">Install check #2:</string>
+    <string name="installcheck3">Install check #3:</string>
+    <string name="superuser">Root:</string>
+    <string name="failure">Failure</string>
 </resources>
